--- a/src/App.css
+++ b/src/App.css
@@ -127,10 +127,23 @@ form {
   border-width: 5px;
 }
 
-.selected {
-  background-color: green;
+.reject {
+  background-color: red;
+}
+
+.accept {
+  background-color: limegreen;
 }
 
 .select-button img{
   height: inherit;
+}
+
+.error-box {
+  text-align: center;
+  background-color: firebrick;
+  padding: 20px;
+  font-size: 20px;
+  border-style: solid;
+  border-width: 3px;
 }
